# CPP_ASIO

./: .gitignore
NvimNotes/: Shortcuts  globalformatting
Project/: .clang-format  .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  platformsInfo
Project/include/: FileAccess.hpp  HttpClient.hpp  OSHelper.h  RequestHeaderBuilder.hpp
Project/src/: FileAccess.cpp  HttpClient.cpp  OSHelper.cpp  RequestHeaderBuilder.cpp  main.cpp
Project/vs2019/: Project1.vcxproj  Project1.vcxproj.filters
VSCodeProfiles/: Avalonia.code-profile  C++.code-profile  Java Spring.code-profile  JavaScript.code-profile  MAUI - Development.code-profile  NEASL.code-profile  Python.code-profile  TypeScript.code-profile  dotnet.code-profile
